Position relative img_wrap to temporarily fix header bar issue

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {background:none;background-color:#fff;overflow:hidden;}
 #header {padding-top:35px;margin-left:auto;margin-right:auto;float:none;height:110px;border:none;}
 
 /* Front Page */
-#front_page {width:100%;height:100%;}
+#front_page {position:relative;width:100%;height:100%;}
 /** Deep Magic **/
 #front_page #feature_wrap {
 	display:table;
